# traitinterp

./: .env.example  .geminiignore  .gitignore  .publicinclude  CLAUDE.md  LICENSE  README.md  analyze_extraction_prompts.py  analyze_for_resume.py  analyze_high_low.py  analyze_jailbreak_refusal.py  analyze_method_comparison.py  bomb_trajectory.txt  colab_batch_extraction_fixed.ipynb  colab_persona_extraction.ipynb  compare_component_vectors.py  compare_layers_components.py  consolidate_activations.py  discover_traits_temp.py  download_llama.py  emotional_valence_4x4_distribution_matrix.py  export_trajectories.py  extract_parallel_8gpus.py  extraction_log.txt  formality_natural_analysis.py  overnight_EXPERIMENTAL.sh  overnight_MEDIUM_robust.sh  overnight_experiments.sh  overnight_experiments_FULL.sh  overnight_experiments_MEDIUM.sh  overnight_experiments_batched.sh  package-lock.json  package.json  prompts_cognitive.txt  prompts_commitment.txt  prompts_instructed_refusal.txt  prompts_instructed_uncertainty.txt  prompts_natural_refusal.txt  prompts_natural_uncertainty.txt  prompts_sycophancy.txt  (+19 more)
analysis/: README.md  attention_decay.py  check_available_data.py  commitment_point_detection.py  cross_distribution_scanner.py  data_checker.py  encode_sae_features.py  evaluate_on_validation.py  evaluate_vector_quality.py  evaluate_vectors.py  evaluate_vectors_simple.py  extraction_quality_report.py  generate_eval_awareness_scenarios.py  generate_remaining_natural_scenarios.py  instruction_confound_analysis.py  layer_emergence.py  massive_activations.py  multi_layer_probe.py  (+14 more)
(+2652 files in other folders)
